--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header-box" >
-  <img class="header-logo" src="https://github.com/SaqibShakil303/Sunflowertrip/blob/master/src/assets/images/logo3.png?raw=true" routerLink="/"alt="Luxury Travel Logo">
+  <img class="header-logo" src="/assets/hero/logo56.png" routerLink="/"alt="Luxury Travel Logo">
   <div class="header-right">
     <app-navbar></app-navbar>
     <nav class="header__menu" [ngClass]="{'nav-active': isNavActive}">
