--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -56,7 +56,7 @@ $gradient-hover: linear-gradient(to bottom right, rgba(163, 200, 240, 0.89), rgb
     line-height: 18px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: $color-primary;
+    color: $color-accent;
     font-weight: 500;
     position: relative;
     display: flex;
@@ -65,7 +65,7 @@ $gradient-hover: linear-gradient(to bottom right, rgba(163, 200, 240, 0.89), rgb
 
     &::after {
       content: '';
-      border: solid $color-primary;
+      border: solid $color-accent;
       border-width: 0 2px 2px 0;
       display: inline-block;
       padding: 4px;
@@ -131,7 +131,7 @@ $gradient-hover: linear-gradient(to bottom right, rgba(163, 200, 240, 0.89), rgb
   margin-top: 10px;
   margin-left: 20px;
   background-color: transparent;
-  color: $color-primary;
+  color: $color-accent;
   border: 2px solid #fff;
   padding: 8px 16px;
   border-radius: 25px;
